FP-827: Remove CSS that causes new overflow issue
… but restores old overflow issue.

--- a/client/src/components/Tickets/TicketCreateForm.scss
+++ b/client/src/components/Tickets/TicketCreateForm.scss
@@ -61,10 +61,3 @@
     margin-left: 10px;
   }
 }
-
-.ticket-create-modal-body {
-  display: flex;
-  flex-direction: column;
-  overflow: auto;
-  padding-bottom: 1em;
-}
