--- a/client/src/components/Tickets/TicketCreateModal.scss
+++ b/client/src/components/Tickets/TicketCreateModal.scss
@@ -1,14 +1,6 @@
-.ticket-create-modal-body {
-  display: flex;
-  flex-direction: column;
-  overflow: auto;
-  padding-bottom: 1em;
-}
-
 .ticket-create-modal {
   color: #484848;
   font-size: 0.75rem;
-  min-height: 755px;
 
   .modal-header {
     background-color: #F4F4F4;
@@ -20,8 +12,4 @@
       max-width: 650px;
     }
   }
-}
-
-.ticket-create-modal-content {
-  height: 90vh;
 }
